# seer

./: .gitignore  PRIVACY.md  README.md  SECURITY.md  install.py  pyproject.toml
docs/: jarvis-handbook.md
examples/: README.md  browser_research.md  file_organization.md  multi_app_workflow.md  notepad_demo.py  voice_jarvis_quickstart.md
eyeva/: server.py
eyeva/uia/: actions.py  tree.py
installer/: build.py  demo-scripts.md  launch-copy.md  seer.iss  webstore-listing.md
seer/: server.py  tray.py
seer/browser/: bridge.py  cdp.py  constants.py  install_native_host.py  native_host.py  token.py
seer/browser/extension/: background.js  content.js  manifest.json  newtab.html  popup.html  popup.js
seer/browser/extension/icons/: make_icons.py
seer/spotify/: auth.py  client.py  setup.py
seer/uia/: actions.py  redact.py  screenshot.py  tree.py
