[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seer"
version = "0.1.0"
description = "Give AI agents structured vision and control over the Windows desktop via MCP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
keywords = ["mcp", "windows", "uia", "automation", "ai-agent", "desktop"]
dependencies = [
    "mcp>=1.0.0",
    "uiautomation>=2.0.0",
    "websocket-client>=1.0.0",
    "pillow>=10.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pystray>=0.19",
]

[project.scripts]
seer = "seer.server:main"
seer-tray = "seer.tray:main"

[project.urls]
Homepage = "https://github.com/av29nassh-sketch/seer"
Issues = "https://github.com/av29nassh-sketch/seer/issues"
